--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+0.2 - unreleased
+----------------
+
+- Fix tal expression to deal with traversal problems
+  [vangheem]
+
+
 0.1 - 2011-10-25
 ----------------
 
