--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,8 @@
 Changelog
 =========
 
-1.1 - Unreleased
-----------------
+1.0+enfold1 (2017-10-06)
+------------------------
 
 - Make the product Plone 5 compatible
   [frapell]
