--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.0+enfold2 (unreleased)
+------------------------
+
+- Nothing changed yet.
+
+
 1.0+enfold1 (2017-10-06)
 ------------------------
 
